<resources>
    <string name="app_name">AnnyCase</string>
    <string name="title_active_login">AnnyCase</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Sin up</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title">AnnyCase</string>
    <string name="nav_header_subtitle">annycase@gmail.com</string>

    <string name="menu_QSomos">¿Quiénes Somos?</string>
    <string name="menu_Login">Ingresar</string>
    <string name="menu_Registro">Registrarte</string>
    <string name="menu_Modelos">Modelos</string>
    <string name="menu_perso">Personalizar</string>
    <string name="menu_carrito">Carrito</string>
    <string name="menu_Contacto">Contactanos</string>
    <string name="menu_Descuento">Descuento</string>
    <string name="menu_home">AnnyCase</string>
    <string name="quienessomos">Anny Cases ofrece sus servicios en el área metropolitana desde 2010.Esta empresa, fundada por Anayin Paez, pinta diseños personalizados. Nuestro equipo te ayudará hacer realidad tus ideas y hacerte brillar. \n\n Hemos sido mencionados en numerosos periodicos, como la Jornada y Reforma.\n\n Llámanos o envianos correo electrónico para reservar una cita hoy mismo.</string>
    <string name="quien">¿Quiénes\n <br>             </br> Somos? </string>
    <string name="title_activity_contacto">ContactoActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_Usuario">Usuario</string>
</resources>